<resources>
    <string name="app_name">Welcome_activity</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="welcome_user">Welcome User</string>
    <string name="name_or_email">name_or_email</string>
    <string name="sing_up">sing up</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="welcome_message_description">Welcome message for the user</string>
    <string name="my_profile">My profile</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="for_you">For you</string>
    <string name="button">Button</string>
    <string name="buttone">Buttone</string>
    <string name="todo">TODO</string>
    <string name="button2">Button2</string>
    <string name="todo4">TODO4</string>
    <string name="wt">wt</string>
    <string name="button0">Button0</string>
    <string name="qa">qa</string>
    <string name="aq">aq</string>
    <string name="wa">wa</string>
    <string name="aw">aw</string>
    <string name="imagebt1">imagebt1</string>
    <string name="imagebt2">imagebt2</string>
    <string name="imagebt3">imagebt3</string>
    <string name="imagebt4">imagebtt4</string>
    <string name="imagebt5">imagebt5\n</string>
    <string name="ima">ima</string>
    <string name="ima1">ima1</string>
    <string name="ime">ime</string>
    <string name="ime1">ime1</string>
    <string name="todoq">TODOq</string>
    <string name="todow">TODOw</string>
    <string name="todor">TODOr</string>
    <string name="todot">TODOt</string>
    <string name="textview">TextView</string>
    <string name="john">John</string>
    <string name="richer">Richer</string>
    <string name="conor">Conor</string>
    <string name="andrew">Andrew</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>


    <string name="_600">600</string>
    <string name="_234">234</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="post">post</string>
    <string name="k">k</string>
    <string name="k1">k1</string>
    <string name="k3">k3</string>
    <string name="p">p</string>
    <string name="p1">p1</string>
    <string name="p2">p2</string>
    <string name="p4">p4</string>
    <string name="p5">p5</string>
    <string name="p6">p6</string>
    <string name="p7">p7</string>
    <string name="p8">p8</string>
    <string name="p9">p9</string>
    <string name="p10">p10</string>
    <string name="p11">p11</string>
    <string name="p12">p12</string>
    <string name="p13">p13</string>
    <string name="p14">p14</string>
    <string name="p15">p15</string>
    <string name="p16">p16</string>
    <string name="p17">p17</string>
    <string name="p18">p18</string>
    <string name="p20">p20</string>
    <string name="todof">TODOf</string>
    <string name="map">map</string>
    <string name="my_map_api_key" translatable="false">AIzaSyCuPHA1kVhOu49ONZkcvhukLwDojI8wGtA</string>
    <string name="view">view</string>
    <string name="vi">vi</string>
    <string name="r1">r1</string>
    <string name="tr">tr</string>
    <string name="ista">ista</string>
</resources>