<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/story_name"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_profile">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/john"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/richer"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="17dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/conor"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/andrew"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>